--- a/fresh_mutenka/package.json
+++ b/fresh_mutenka/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "swr": "^2.2.5"
     "@supabase/supabase-js": "^2.39.7",
     "next": "14.1.3",
     "react": "^18",
